--- a/HmiPro/Views/HomeView.xaml
+++ b/HmiPro/Views/HomeView.xaml
@@ -50,6 +50,9 @@
                 <!--dxlc:Tile Header="质量检测"  Style="{StaticResource HorizontalTile}" Background="#009608"  Command="{Binding NavigateCommand}" CommandParameter="McQualityCheckView" >
                     <BitmapImage UriSource="{Binding Assets.IconQualityControl}" />
                 </>-->
+                <dxlc:Tile Header="设置"  Style="{StaticResource HorizontalTile}" Visibility="{Binding Path=SettingViewVisibility}" Background="#509688"  Command="{Binding JumpAppSettingViewCommand}" CommandParameter="设置程序信息">
+                    <BitmapImage UriSource="{Binding Assets.IconSetting2}" />
+                </dxlc:Tile>
                 <dxlc:Tile Header="实时曲线"  Style="{StaticResource HorizontalTile}" Background="#509688"  Command="{Binding NavigateCommand}" CommandParameter="GrafanaView">
                     <BitmapImage UriSource="{Binding Assets.IconStatsLines}" />
                 </dxlc:Tile>
