--- a/HmiPro/Views/Sys/TestView.xaml
+++ b/HmiPro/Views/Sys/TestView.xaml
@@ -25,6 +25,7 @@
                 <Button Content="关闭显示器 5s" Height="50" Width="200" Command="{Binding Path=CloseScreenCommand}"  CommandParameter="5"></Button>
                 <Button Content="显示通知" Height="50" Width="200" Command="{Binding Path=ShowNotificationCommand}"  ></Button>
                 <Button Content="显示键盘" Height="50" Width="200" Command="{Binding Path=OskCommand}"  ></Button>
+                <Button Content="关闭软件" Height="50" Width="200" Command="{Binding Path=CloseAppCommand}"  ></Button>
                 <Button Content="检查更新" Height="50" Width="200" Command="{Binding Path=CheckUpdateCommand}"  ></Button>
             </dxlc:FlowLayoutControl>
         </Grid>
