--- a/HmiPro/Views/Sys/TestView.xaml
+++ b/HmiPro/Views/Sys/TestView.xaml
@@ -17,7 +17,7 @@
 
     <dxwui:PageAdornerControl  Header="测试页面" ShowBackButton="True">
         <Grid>
-            <dxlc:FlowLayoutControl BreakFlowToFit="True" HorizontalAlignment="Center">
+            <dxlc:FlowLayoutControl BreakFlowToFit="True" HorizontalAlignment="Center" >
                 <Button Height="50" Width="200" Content="打开报警灯 2s" Command="{Binding Path=OpenAlarmCommand}" CommandParameter="2000"></Button>
                 <Button Content="关闭报警灯" Height="50" Width="200" Command="{Binding Path=CloseAlarmCommand}"></Button>
                 <Button Content="关闭显示器" Height="50" Width="200" Command="{Binding Path=CloseScreenCommand}"></Button>
@@ -25,6 +25,9 @@
                 <Button Content="关闭显示器 5s" Height="50" Width="200" Command="{Binding Path=CloseScreenCommand}"  CommandParameter="5"></Button>
                 <Button Content="显示通知" Height="50" Width="200" Command="{Binding Path=ShowNotificationCommand}"  ></Button>
                 <Button Content="显示键盘" Height="50" Width="200" Command="{Binding Path=OskCommand}"  ></Button>
+                <Button Content="显示桌面" Height="50" Width="200" Command="{Binding Path=ReturnDesktopCommand}"  ></Button>
+                <Button Content="隐藏任务栏" Height="50" Width="200" Command="{Binding Path=HideTaskBarCommand}"  ></Button>
+                <Button Content="显示任务栏" Height="50" Width="200" Command="{Binding Path=ShowTaskBarCommand}"  ></Button>
                 <Button Content="关闭软件" Height="50" Width="200" Command="{Binding Path=CloseAppCommand}"  ></Button>
                 <Button Content="检查更新" Height="50" Width="200" Command="{Binding Path=CheckUpdateCommand}"  ></Button>
             </dxlc:FlowLayoutControl>
