add: some icons

--- a/HmiPro/Views/HomeView.xaml
+++ b/HmiPro/Views/HomeView.xaml
@@ -54,7 +54,7 @@
                     <BitmapImage UriSource="{Binding Assets.IconSetting2}" />
                 </dxlc:Tile>
                 <dxlc:Tile Header="实时曲线"  Style="{StaticResource HorizontalTile}" Background="#509688"  Command="{Binding NavigateCommand}" CommandParameter="GrafanaView">
-                    <BitmapImage UriSource="{Binding Assets.IconStatsLines}" />
+                    <BitmapImage UriSource="{Binding Assets.IconMonitor2}" />
                 </dxlc:Tile>
                 <dxlc:Tile Header="系统管理"  Style="{StaticResource HorizontalTile}"  Background="#087688"  Command="{Binding NavigateCommand}" CommandParameter="TestView">
                     <BitmapImage UriSource="{Binding Assets.IconPrivacy}" />
