--- a/HmiPro/DxWindow.xaml
+++ b/HmiPro/DxWindow.xaml
@@ -18,8 +18,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
     mc:Ignorable="d"
+    Padding="0"
+    Margin="0"
     d:DesignHeight="600" d:DesignWidth="800"
     >
+    <Window.Background>
+        <ImageBrush ImageSource="{Binding Path=BackgroundImage}"/>
+
+    </Window.Background>
 
     <dx:DXWindow.DataContext>
         <viewModels:DxWindowViewModel/>
@@ -43,7 +49,7 @@
         <navigation:FrameNavigationService Frame="{Binding ElementName=frame}"  />
         <dx:DXSplashScreenService SplashScreenType="{x:Type View:LoadingWindow}" />
     </dxmvvm:Interaction.Behaviors>
-    <Grid>
+    <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto"/>
@@ -60,7 +66,9 @@
         <Border Grid.Row="1" Height="{Binding Path=MarqueeHiehgit}" Background="Red" Visibility="{Binding Path=MarqueeVisibility}">
             <controls:MarqueeTextControl Height="28"  MarqueeTimeInSeconds="10" MarqueeType="RightToLeft"  ContentFontSize="22"  ContentText="{Binding Path=MarqueeText}" Foreground="White"></controls:MarqueeTextControl>
         </Border>
-        <dxwui:NavigationFrame Grid.Row="2"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="Root" />
+        <dxwui:NavigationFrame  Grid.Row="2"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="Root" >
+       
+        </dxwui:NavigationFrame>
     </Grid>
 
 </dx:DXWindow>
