--- a/HmiPro/Themes/Templates.xaml
+++ b/HmiPro/Themes/Templates.xaml
@@ -8,7 +8,9 @@
                     xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
                     xmlns:internal="http://schemas.devexpress.com/winfx/2008/xaml/windowsui/internal"
                     xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
-                    xmlns:themeKeys="http://schemas.devexpress.com/winfx/2008/xaml/windowsui/themekeys">
+                    xmlns:themeKeys="http://schemas.devexpress.com/winfx/2008/xaml/windowsui/themekeys"
+                    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+                    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Converts.xaml" />
@@ -71,7 +73,7 @@
             </controls:TileExt.HeaderTemplate>
             <dxlc:Tile.ContentTemplate>
                 <DataTemplate>
-                  
+
                 </DataTemplate>
             </dxlc:Tile.ContentTemplate>
         </controls:TileExt>
@@ -120,4 +122,23 @@
             </Grid>
         </Border>
     </ControlTemplate>
+    <ControlTemplate xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
+                     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+                     x:Key="{dxgt:GridControlThemeKey ResourceKey=BorderTemplate, IsThemeIndependent=True}"
+                     TargetType="{x:Type ContentControl}">
+        <Border Background="Transparent">
+            <Border.Padding>
+                <Binding Path="(dxg:GridBorderHelper.ShowBorder)" RelativeSource="{RelativeSource TemplatedParent}">
+                    <Binding.Converter>
+                        <dx:BoolToObjectConverter FalseValue="0" TrueValue="1" />
+                    </Binding.Converter>
+                </Binding>
+            </Border.Padding>
+            <!--<Border Background="Transparent">
+                <ContentPresenter />
+            </Border>-->
+                <ContentPresenter />
+        </Border>
+    </ControlTemplate>
+ 
 </ResourceDictionary>
