--- a/HmiPro/DxWindow.xaml
+++ b/HmiPro/DxWindow.xaml
@@ -12,19 +12,19 @@
     xmlns:controls="clr-namespace:HmiPro.Controls"
     ShowIcon="False"
     ShowTitle="False"
-
-    Title="Hmi Pro Dev By Ychost"
+    Title="HmiPro"
     Topmost="True"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
     mc:Ignorable="d"
     Padding="0"
     Margin="0"
+    AllowsTransparency="True"
     d:DesignHeight="600" d:DesignWidth="800"
     >
     <Window.Background>
-        <ImageBrush ImageSource="{Binding Path=BackgroundImage}"/>
-
+        <ImageBrush ImageSource="{Binding Path=BackgroundImage}" >
+        </ImageBrush>
     </Window.Background>
 
     <dx:DXWindow.DataContext>
@@ -49,13 +49,13 @@
         <navigation:FrameNavigationService Frame="{Binding ElementName=frame}"  />
         <dx:DXSplashScreenService SplashScreenType="{x:Type View:LoadingWindow}" />
     </dxmvvm:Interaction.Behaviors>
-    <Grid Margin="0">
+    <Grid Margin="0" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <dxlc:LayoutControl Orientation="Vertical" Height="{Binding Path=LoadingGridHeight}" Visibility="{Binding Path=LoadinngGridVisibility}">
+        <dxlc:LayoutControl Background="Transparent" Orientation="Vertical" Height="{Binding Path=LoadingGridHeight}" Visibility="{Binding Path=LoadinngGridVisibility}">
             <dxlc:LayoutItem HorizontalAlignment="Center" VerticalAlignment="Center">
                 <controls:ViewLoadingControl  Grid.Row="0"  Height="150" Width="150"  />
             </dxlc:LayoutItem>
@@ -67,7 +67,7 @@
             <controls:MarqueeTextControl Height="28"  MarqueeTimeInSeconds="10" MarqueeType="RightToLeft"  ContentFontSize="22"  ContentText="{Binding Path=MarqueeText}" Foreground="White"></controls:MarqueeTextControl>
         </Border>
         <dxwui:NavigationFrame  Grid.Row="2"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="Root" >
-       
+
         </dxwui:NavigationFrame>
     </Grid>
 
