--- a/HmiPro/Views/HomeView.xaml
+++ b/HmiPro/Views/HomeView.xaml
@@ -36,7 +36,7 @@
 
             <dxlc:TileLayoutControl Grid.Row="1" Padding="32,50,30,10" >
                 <dxlc:Tile Header="生产管理" Style="{StaticResource HorizontalTile}" Background="#FF54AF0E"  Command="{Binding NavigateCommand}" CommandParameter="DMesCoreView">
-                    <BitmapImage UriSource="{Binding Assets.IconMonitor}" />
+                    <BitmapImage UriSource="{Binding Assets.IconTask}" />
                 </dxlc:Tile>
                 <dxlc:Tile Header="呼叫管理" Style="{StaticResource HorizontalTile}" Background="#00b8d4"  Command="{Binding NavigateCommand}" CommandParameter="MqCallView">
                     <BitmapImage UriSource="{Binding Assets.IconCall}" />
